--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -6,7 +6,7 @@
         res/values-v11/styles.xml on API 14+ devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- API 14 theme customizations can go here. -->
+        <item name="current_location_icon">@drawable/current_location_dark</item>
     </style>
 
 </resources>
