Added Google Analytics + events Added Admob Disabled Center on Position button when alarm is set

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <com.google.android.gms.ads.AdView android:id="@+id/adView"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         ads:adUnitId="ca-app-pub-5796283935972448/1876791411"
+                         ads:adSize="SMART_BANNER"/>
     
     <fragment
         android:id="@+id/map"
