--- a/res/layout/dialog_savelocation.xml
+++ b/res/layout/dialog_savelocation.xml
@@ -3,16 +3,16 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-    
+
     <EditText
         android:id="@+id/editTextLocationName"
-        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/location_name_hint" />
+        android:layout_marginTop="16dp"
+        android:hint="@string/location_name_hint"
+        android:inputType="textCapSentences" />
 
 </LinearLayout>
